public/stylesheets/style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
@import "vendor/LineIcons.min.css";
@import "vendor/bootstrap.min.css";
@import "vendor/fontawesome.min.css";
@import "vendor/pretty-checkbox.min.css";

:root {
    --accent: rgb(255,222,0);
    --dark: #000000;
    --background: rgb(247, 247, 249);
    --card-background: rgb(203, 203, 203);
    --grey: rgb(169, 169, 169);
    --red: #fd5a5a;
    --blue: #367bc4;
}

.selected {
    border-bottom: 2.5px var(--accent) solid;
}

.selected:hover {
    text-decoration: none !important;
}

html, body {
    background-color: var(--background);
}

.letter-space-1 {
    letter-spacing: 0.1em;
}

.row {
    margin-left: 0;
    margin-right: 0;
}

.hidden {
    display: none;
}

.starwars-font {
    font-family: 'StarJedi', sans-serif;
}

.fa-ethereum {
    margin-top: 4px;
}

.star-wars-money img, .star-wars-money i {
    height: 24px;
    width: 24px;
}

.star-wars-money, .star-wars-points {
    display: flex;
    align-items: center;
}

.star-wars-money span, .star-wars-points span {
    margin-top: 4px;
    margin-left: 8px;
}

@font-face {
    font-family: 'RobotoRegular';
    src: url("fonts/Roboto/Roboto-Regular.woff");
}

@font-face {
    font-family: 'RobotoBold';
    src: url("fonts/Roboto/Roboto-Bold.woff");
}

@font-face {
    font-family: 'Starjedi';
    src: url("fonts/starjedi/StarJedi.woff");
}

#circle {
    position: fixed;
    bottom: -300px;
    left: -300px;
    height: 500px;
    width: 600px;
    background-color: #191919;
    border: 20px solid var(--accent);
    border-radius: 50%;
}

#circleSmall {
    position: fixed;
    bottom: -150px;
    left: 100px;
    height: 250px;
    width: 300px;
    background-color: #191919;
    border: 20px solid var(--accent);
    border-radius: 50%;
}

#circleSmallRight {
    position: fixed;
    top: -200px;
    right: -100px;
    height: 300px;
    width: 300px;
    background-color: #191919;
    border: 20px solid var(--accent);
    border-radius: 50%;
}

/*Header*/
header {
    height: 92px;
    display: flex;
    padding: 32px;
    align-items: center;
    justify-content: space-between;
    z-index: 100;
    position: relative;
}

header nav {
    display: flex;
    align-items: center;
}

header h6 {
    margin-bottom: 0;
}

header nav ul {
    margin: 0;
}

header nav .logo, header .profile-pic {
    width: 84px;
    height: 80px;
}

header .profile-pic img {
    object-fit: cover;
}

header nav .logo {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 32px;
    text-align: center;
    line-height: 1;
    font-family: 'StarJedi', sans-serif;
    color: var(--dark);
    text-decoration: none;
}

header nav .logo:hover {
    cursor: pointer;
}

header .profile-pic {
    height: 60px;
    width: 60px;
}

header .profile-pic img, header nav .logo img {
    height: 100%;
    width: 100%;
    border-radius: 50%;
}

header .menu-items li {
    list-style-type: none;
    padding: 20px
}

header .menu-items li a {
    color: black;
    text-decoration: none;
}

header .menu-items li a:hover {
    color: black;
    text-decoration: underline;
}

header #hamburger-menu {
    display: none;
}

#bell:hover, #icon-header:hover {
    cursor: pointer;
}

.disconnect, .bell {
    margin: 0;
    display: flex;
    align-items: center;
}

header .disconnect button, header .bell button {
    border: none;
    border-radius: 15px;
    background-color: var(--background);
}

header .disconnect i:hover {
    color: var(--red);
}

header .bell i:hover {
    color: var(--blue);
}

header .gestion-button {
    font-size: 1.1rem;
}

/*ScoreBoard*/
#scoreBoard {
    position: relative;
    max-width: 75vw;
}

.title {
    position: relative;
    max-width: 75vw;
}

.rebel h1 , .rebel h6 {
    text-align: start;
}

.sith h1 {
    text-align: end;
}

.rebel-sith {
    position: absolute;
    top: -135%;
}

.rebel-sith > img {
    width: 15%;
}

.rebel-sith-logo > img {
    position: relative;
    width: 10%;
}

.score-bar {
    background: black;
    justify-content: flex-start;
    border-radius: 50px;
    align-items: center;
    position: relative;
    padding: 0 5px;
    display: flex;
    height: 40px;
    width: 500px;
}

.score-value-left {
    position: absolute;
    right: 0;
    box-shadow: 0 10px 40px -10px #000;
    border-radius: 100px;
    background: #367bc4;
    height: 30px;
}

.score-value-right {
    position: absolute;
    left: 0;
    box-shadow: 0 10px 40px -10px #000;
    border-radius: 100px;
    background: #d1463d;
    height: 30px;
}

.score-points {
    position: absolute;
    width: 100%;
    top: 50px;
}

.position0 {
    color: gold;
}

.position1 {
    color: silver;
}

.position2 {
    color: #cd7f32;
}

/*notifications*/
.card, .box-shadow {
    border-radius: 1rem; !important;
    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, .5);
}

.box-shadow-sith {
    box-shadow: 0 5px 15px 0 rgba(255, 0, 0, 0.5); 
}

.box-shadow-rebel {
    box-shadow: 0 5px 15px 0 rgba(0, 0, 255, 0.5);
}

.notification {
    font-size: small;
    border-radius: 1rem;
}

.notification-row {
    display: flex;
    justify-content: space-between;
}

.notification .time {
    font-size: xx-small;
}

.notification .notification-check:hover {
    color: var(--accent) !important;
}

/*team Member*/
.team {
    margin: 1rem;
    min-width: 15rem;
    border-radius: 1rem;
}

.menu-items > li{
    font-family: 'Starjedi', sans-serif;
    color: var(--dark);
}

.menu-items > li {
    font-family: 'RobotoBold', sans-serif;
    color: var(--dark);
}

body {
    font-size: 1.1rem;
    font-family: 'RobotoBold', sans-serif;
}

.leftImg {
    position: relative;
    left: 120px;
    width: 125%;
}

.btn-yellow {
    background-color: var(--accent);
}

#editProfileBtn i {
    padding-left: .75rem;
}
/* ... */

